==============
lxml changelog
==============

Under development
=================

Features added
--------------

* XPath string results of the ``text()`` function and attribute
  selection make their Element container accessible through a
  ``getparent()`` method.

* ``XSLT`` objects are now usable in any thread - at the cost of a
  deep copy if they were not created in that thread.

* Invalid entity names and character references will now be rejected
  by the ``Entity()`` factory.

* ``entity.text`` now returns the textual representation of the
  entity, e.g. ``&amp;``.

Bugs fixed
----------

* XPath on ElementTrees could crash when selecting the virtual root
  node of the ElementTree.

* Compilation ``--without-threading`` was buggy in alpha5/6.

Other changes
-------------

* Minor performance tweaks for Element instantiation and subelement
  creation


2.0alpha6 (2007-12-19)
======================

Features added
--------------

* New properties ``position`` and ``code`` on ParseError exception (as
  in ET 1.3)

Bugs fixed
----------

* Memory leak in the ``parse()`` function.

* Minor bugs in XSLT error message formatting.

* Result document memory leak in target parser.

Other changes
-------------

* Various places in the XPath, XSLT and iteration APIs now require
  keyword-only arguments.

* The argument order in ``element.itersiblings()`` was changed to
  match the order used in all other iteration methods.  The second
  argument ('preceding') is now a keyword-only argument.

* The ``getiterator()`` method on Elements and ElementTrees was
  reverted to return an iterator as it did in lxml 1.x.  The ET API
  specification allows it to return either a sequence or an iterator,
  and it traditionally returned a sequence in ET and an iterator in
  lxml.  However, it is now deprecated in favour of the ``iter()``
  method, which should be used in new code wherever possible.

* The 'pretty printed' serialisation of ElementTree objects now