@@ -272,14 +272,15 @@ cdef class iterparse(_BaseParser):
 
     Other keyword arguments:
     * encoding           - override the document encoding
+    * schema             - an XMLSchema to validate against
     """
     cdef object _source
     cdef readonly object root
-    def __init__(self, source, events=("end",), tag=None,
+    def __init__(self, source, events=("end",), *, tag=None,
                  attribute_defaults=False, dtd_validation=False,
                  load_dtd=False, no_network=True, remove_blank_text=False,
                  remove_comments=False, remove_pis=False, encoding=None,
-                 html=False):
+                 html=False, XMLSchema schema=None):
         cdef _IterparseContext context
         cdef char* c_encoding
         cdef int parse_options
@@ -318,7 +319,7 @@ cdef class iterparse(_BaseParser):
         if remove_blank_text:
             parse_options = parse_options | xmlparser.XML_PARSE_NOBLANKS
 
-        _BaseParser.__init__(self, parse_options, html,
+        _BaseParser.__init__(self, parse_options, html, schema,
                              remove_comments, remove_pis,
                              None, filename, encoding)
 
